fixed layout problem if user had double digit score

--- a/src/styles/ui/UserStatWithIcon.scss
+++ b/src/styles/ui/UserStatWithIcon.scss
@@ -48,6 +48,7 @@
   color: $textColor;
   padding: 2px 6px;
   position: relative;
+  font-size: 16px;
   top: -60%;
   right: -70%;
   @media screen and (min-width: 1100px) {
